# tiny-spice

./: Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
android/app/: build.gradle
src/: main.rs  spice.js  spice_backend.rs
ui/: app.tsx  hooks.ts  main.ts
