[package]
name = "tiny-spice"
version = "0.1.0"
edition = "2021"

[dependencies]
deft = "0.2.7"
deft-macros = "0.2.0"
deft-skia-safe = "0.81.1"
serde = "1.0.217"
spice-client-glib = "0.5.0"

[build-dependencies]
deft-build = { version = "0.2.0" }

[features]
tray = ["deft/tray"]
x11 = ["deft/x11"]
wayland = ["deft/wayland"]

[lib]
name = "deftapp"
path = "src/main.rs"
crate-type=["cdylib"]
